修正menu
