# routes/api/scrapebooks.php
@@ -1,0 +1,9 @@
+<?php
+
+// use App\Controllers\WebScrapingController;
+
+// Route::prefix('scrapebooks')->group(function () {
+//     Route::get('StartScraping', [WebScrapingController::class, 'StartScraping']);
+//     Route::get('StopScraping', [WebScrapingController::class, 'StopScraping']);
+//     Route::get('GetScrapeProgress', [WebScrapingController::class, 'GetScrapeProgress']);
+// });
